added a bunch of new html tags

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 
     <footer>
         <small>Copyright ©<script>document.write(new Date().getFullYear())</script> Joe Graffeo</small>
+        <a href="mailto:info@info.com">info@info.com</a>
+        <a href="tel:111-111-1111">Call Us</a>
+        <a href="google link" target="_blank">Address</a>
     </footer>
     </body>
     </html>
